legacy/test/util/test_case/tree_file/invalid/invalid_invalid_metadata.tree
name: root
type: directory
children:
  - name: foo.txt
    type: file
metadata:
  name: missing_required_fields 